crates/uselesskey/tests/snapshots/snapshots_facade__ecdsa_snapshots__facade_ecdsa_p256_shape.snap
---
source: crates/uselesskey/tests/snapshots_facade.rs
expression: result
---
algorithm: ECDSA-P256
private_key_pem_header: "-----BEGIN PRIVATE KEY-----"
private_key_der_len: 138
public_key_pem_header: "-----BEGIN PUBLIC KEY-----"
public_key_der_len: 91
