crates/uselesskey/tests/snapshots/snapshots_facade__ecdsa_snapshots__snapshots_ecdsa_es256_private_jwk_structure.snap
---
source: crates/uselesskey/tests/snapshots_facade.rs
expression: redacted
---
alg: ES256
crv: P-256
d: "[REDACTED]"
kid: "[REDACTED]"
kty: EC
use: sig
x: "[REDACTED]"
y: "[REDACTED]"
