crates/uselesskey/tests/snapshots/snapshots_facade__ecdsa_snapshots__snapshots_ecdsa_es256_public_jwk_structure.snap
---
source: crates/uselesskey/tests/snapshots_facade.rs
expression: redacted
---
alg: ES256
crv: P-256
kid: "[REDACTED]"
kty: EC
use: sig
x: "[REDACTED]"
y: "[REDACTED]"
