crates/uselesskey/tests/snapshots/snapshots_facade__ecdsa_snapshots__snapshots_ecdsa_es256_public_pem_structure.snap
---
source: crates/uselesskey/tests/snapshots_facade.rs
expression: redact_pem(kp.public_key_spki_pem())
---
-----BEGIN PUBLIC KEY-----
[REDACTED]
[REDACTED]
-----END PUBLIC KEY-----
