crates/uselesskey/tests/snapshots/snapshots_facade__ecdsa_snapshots__snapshots_ecdsa_es384_private_pem_structure.snap
---
source: crates/uselesskey/tests/snapshots_facade.rs
expression: redact_pem(kp.private_key_pkcs8_pem())
---
-----BEGIN PRIVATE KEY-----
[REDACTED]
[REDACTED]
[REDACTED]
[REDACTED]
-----END PRIVATE KEY-----
